# nutri_chatbot

./: LICENSE  README.md
backend/: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
backend/database/: docker-compose.yaml
backend/docs/: 00-overview.md  01-project-structure.md  02-data-model.md  03-api-reference.md  04-authentication-and-security.md  05-multi-agent-system.md  06-workflows.md  07-configuration-and-deployment.md
backend/libs/logger/: README.md  pyproject.toml
backend/libs/logger/src/logger/: __init__.py
backend/src/nutri/: README.md  pyproject.toml  reset_db.py
backend/src/nutri/ai/: __init__.py  checkpoint.py  language.py  llm_client.py  memory.py  system_prompt.py
backend/src/nutri/ai/agents/: __init__.py  assistant_agent.py  dish_edit_agent.py  enrich_metadata_agent.py  fridge_check_agent.py  grocery_list_agent.py  meal_plan_agent.py  spike_predictor_agent.py
backend/src/nutri/ai/tools/: __init__.py  health_tools.py  knowledge_tools.py  menu_tools.py  nutrition_tools.py  plan_tools.py  profile_tools.py  recipe_tools.py
backend/src/nutri/ai/workflows/: grocery_workflow.py  meal_plan_workflow.py
backend/src/nutri/api/: dependencies.py  main.py
backend/src/nutri/api/routers/: auth.py  chat.py  collections.py  draft_edit.py  grocery.py  inventory.py  memory.py  menus.py  onboarding.py  profile.py  recipes.py  system.py
backend/src/nutri/common/: i18n.py
backend/src/nutri/common/config/: logging_config.py  settings.py
backend/src/nutri/core/auth/: dto.py  entities.py  models.py
backend/src/nutri/core/chat/: dto.py  models.py  services.py
backend/src/nutri/core/collections/: dto.py  services.py
backend/src/nutri/core/db/: __init__.py  session.py
backend/src/nutri/core/draft_edit/: dto.py  services.py
backend/src/nutri/core/grocery/: dto.py  mart_search.py  models.py  product_validator.py  services.py  shopping_bg.py  store_mapping.py
backend/src/nutri/core/grocery/data/: lotte_branches.json  winmart_stores.json
backend/src/nutri/core/inventory/: dto.py  services.py
backend/src/nutri/core/memory/: __init__.py  dto.py
backend/src/nutri/core/menus/: dto.py  models.py  services.py
backend/src/nutri/core/onboarding/: dto.py  models.py  services.py
backend/src/nutri/core/profile/: dto.py
backend/src/nutri/core/recipes/: dto.py  entities.py  models.py
backend/src/nutri/core/security/: jwt.py
backend/src/nutri/scripts/: reset_db.py
backend/tests/logger/: test_configure_logger.py
deploy/: .env_example  README.md  docker-compose.yml
frontend/: .dockerignore  .env _example  .gitignore  Dockerfile  README.md  env-config.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/docs/: 00-overview.md  01-project-structure.md  02-architecture.md  03-routing-and-navigation.md  04-authentication.md  05-api-layer.md  06-feature-modules.md  07-state-management.md  08-deployment.md  09-design-system.md
frontend/src/: index.css  main.tsx
frontend/src/app/: router.tsx
frontend/src/components/auth/: ProtectedRoute.tsx
frontend/src/components/ui/: Button.tsx  Footer.tsx  Modal.tsx  Navbar.tsx  footer.messages.ts  navbar.messages.ts
frontend/src/features/auth/: index.ts
frontend/src/features/auth/components/: AuthGuard.tsx  AuthModal.tsx  authModal.messages.ts
frontend/src/features/blog/: blog.messages.ts
frontend/src/features/blog/pages/: BlogPage.tsx
frontend/src/features/chat/: chat.messages.ts  menuDraft.messages.ts
frontend/src/features/chat/api/: chatApi.ts  menuDraftApi.ts
frontend/src/features/chat/components/: ChatScreen.tsx  MenuDraftWidget.tsx
frontend/src/features/chat/types/: chat.ts  menuDraft.ts
frontend/src/features/cooking/: cooking.messages.ts
frontend/src/features/cooking/api/: recipesApi.ts
frontend/src/features/cooking/components/: CreateCollectionModal.tsx  FilterModal.tsx  RecipeDetailModal.tsx  SaveToCollectionMenu.tsx
frontend/src/features/cooking/pages/: CollectionDetailPage.tsx  WhatsCookingPage.tsx
frontend/src/features/dashboard/: dashboard.messages.ts
frontend/src/features/dashboard/components/: DashboardHeader.tsx  GrocerySidebar.tsx  MenuGrid.tsx  RecipeCard.tsx
frontend/src/features/dashboard/pages/: DashboardPage.tsx
frontend/src/features/inventory/: inventory.messages.ts
frontend/src/features/inventory/api/: inventoryApi.ts
frontend/src/features/inventory/components/: InventoryDashboard.tsx
frontend/src/features/meal-planner/: grocery.messages.ts  mealPlanner.messages.ts
frontend/src/features/meal-planner/api/: groceryApi.ts  menuApi.ts
frontend/src/features/meal-planner/components/: GroceryListDashboard.tsx  MealPlannerDashboard.tsx  ShoppingModal.tsx
frontend/src/features/onboarding/: onboarding.messages.ts
frontend/src/features/onboarding/components/: QuizStep1.tsx  QuizStep2.tsx  QuizStep3.tsx  QuizWizard.tsx
frontend/src/features/onboarding/pages/: OnboardingPage.tsx
frontend/src/features/profile/: profile.messages.ts
frontend/src/features/profile/api/: profileApi.ts
frontend/src/features/profile/components/: ChangePasswordModal.tsx  ContactPreferencesPage.tsx  DisplaySettingsPage.tsx  HouseholdSetupPage.tsx  MyAccountsPage.tsx  OnboardingScreen.tsx  PrivacySettingsPage.tsx  ProfileSidebar.tsx  RewardsPage.tsx  ShoppingListHistoryPage.tsx
frontend/src/features/profile/pages/: ProfilePage.tsx
frontend/src/features/system/: system.messages.ts
frontend/src/features/system/api/: systemApi.ts
frontend/src/features/system/pages/: LogsPage.tsx
frontend/src/pages/: HomePage.tsx  homePage.messages.ts
frontend/src/shared/api/: client.ts
frontend/src/shared/i18n/: LocaleContext.tsx  locale.ts
frontend/src/shared/layouts/: MainLayout.tsx
frontend/src/shared/theme/: ThemeContext.tsx
