[project]
name = "nutri-backend"
version = "0.1.0"
description = "Nutri Backend Monorepo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "gunicorn>=22.0.4",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "alembic>=1.13.3",
  "asyncpg>=0.30.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt==3.2.2",
  "python-multipart>=0.0.12",
  "email-validator>=2.2.0",
  "httpx>=0.27.2",
  "structlog>=24.4.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.6",
  "langchain-google-genai>=2.0.0",
  "nutri-logger",                         # Internal
  "google-api-core>=2.30.0",
  "tavily-python>=0.5.0",
  "langchain-community>=0.4.1",
  "langgraph-checkpoint-postgres>=3.0.4",
  "psycopg[binary,pool]>=3.3.3",
  "langdetect>=1.0.9",
  "langchain-openai>=1.1.11",
  "sse-starlette>=3.3.3",
  "mem0ai>=0.1.28",
]

[dependency-groups]
dev = ["pytest>=8.3.3", "ruff>=0.7.2", "mypy>=1.13.0"]

[tool.uv.sources]
nutri-logger = { workspace = true }

[tool.uv.workspace]
members = ["libs/*", "src/*", "packages/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nutri"]
