[project]
name = "nutri-logger"
version = "0.1.0"
description = "Shared structured logging library"
requires-python = ">=3.12"
dependencies = [
    "structlog>=24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/logger"]
