[project]
name = "nutri-api"
version = "0.1.0"
description = "Main Nutri API Service"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.30.0",
  "pydantic-settings>=2.6.0",
  "nutri-logger>=0.1.0",
]

[project.scripts]
nutri-api = "nutri.main:main"

[tool.uv.sources]
nutri-logger = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nutri"]
